# QtExamples

SetupOpenGL2/: SetupOpenGL2.sln  SetupOpenGL2.vcxproj  SetupOpenGL2.vcxproj.filters
SetupOpenGL2/dependencies/include/: glad.h
SetupOpenGL2/res/: default.frag  default.vert
SetupOpenGL2/src/: ebo.cpp  main.cpp  shaders.cpp  shaders.h  vao.cpp  vao.h  vbo.cpp  vbo.h
SetupOpenGL3/: .gitignore  SetupOpenGL2.vcxproj  SetupOpenGL2.vcxproj.filters
SetupOpenGL3/res/: default.frag  default.vert
SetupOpenGL3/src/: ebo.h  glad.c  main.cpp  texture.cpp  texture.h  vao.h
build-qtserial-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-qtserial-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-e4e3fbd8ba2c05976a00.json  index-2024-07-12T21-51-46-0675.json  target-serialviewer_autogen-Debug-48d84ab1357d0fb80b16.json
build-qtserial-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-d98ee0a91e0a597066b7.json  codemodel-v2-128e1703e11957bf26bd.json  target-serialviewer-Debug-a6ce8c8fef566570c291.json
build-qtserial-Desktop-Debug/qtdesign1_autogen/: mocs_compilation.cpp
build-qtserial-Desktop-Debug/qtdesign1_autogen/UVLADIE3JM/: moc_Mainwindow.cpp.d
build-qtserial-Desktop-Debug/serialviewer_autogen/UVLADIE3JM/: moc_Mainwindow.cpp  moc_Mainwindow.cpp.d
izOpenGL2/: CMakeLists.txt
izOpenGL2/src/: glad.c  glad.h  main.cpp  main_base.cpp  main_bunny.cpp
izOpenGl1/: CMakeLists.txt
izOpenGl1/src/: bunny.cpp  main.cpp
ogl/: CMakeLists.txt
ogl/src/: main.cpp
openglpure1/: CMakeLists.txt
openglpure1/src/: config.h  main.cpp
openglsquare1/: CMakeLists.txt
openglsquare1/res/: default.frag  default.vert
openglsquare1/src/: bunny.h  fwd.h  main.cpp  shaders.cpp  shaders.h
qtdesign1/: CMakeLists.txt
qtdesign1/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pokus.cpp  pokus.h  searchdialog.cpp  searchdialog.h  searchdialog.ui
qtdesign2/: CMakeLists.txt
qtdesign2/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qtexample1/: CMakeLists.txt
qtexample1/src/: main.cpp
qtexample2/: CMakeLists.txt
qtexample2/src/: main.cpp  myclass.cpp  myclass.h  stopwatch.cpp  stopwatch.h  window.cpp  window.h
qtexample3/: CMakeLists.txt
qtexample3/src/: main.cpp  stopwatch.cpp  stopwatch.h
qtexample4/: CMakeLists.txt
qtexample4/src/: main.cpp  window.cpp  window.h
qtexample5/: CMakeLists.txt
qtexample5/src/: main.cpp  myemitter.cpp  myemitter.h  myemmiter.cpp  myreceiver.cpp  myreceiver.h
qtexample6/: CMakeLists.txt
qtexample6/src/: main.cpp  widget.cpp  widget.h
qtexample7/: CMakeLists.txt
qtexample7/src/: main.cpp  scribbleArea.cpp  scribbleArea.h
qtopengl1/: CMakeLists.txt
qtopengl1/src/: glwidget.h  main.cpp  mainwindow.cpp
qtopengl2/: CMakeLists.txt  basicusagescene.h
qtopengl2/res/: resources.qrc
qtopengl2/res/shaders/: phong.frag  phong.vert
qtopengl2/src/: abstractscene.h  basicusagescene.cpp  main.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  trianglewindow.cpp  trianglewindow.h
qtopengl3/: CMakeLists.txt  README.md
qtopengl3/src/: mainwindow.cpp  mainwindow.ui  triangleglwidget.cpp  triangleglwidget.h
qtserial/: CMakeLists.txt
qtserial/src/: Mainwindow.cpp  Mainwindow.h  Mainwindow.ui
